--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
-<html><head><title>HTML Калькулятор</title></head><body bgcolor="#FFFFB0" text="red">
+<html><head><title>HTML Калькулятор</title></head><body bgcolor="#FFFFE0" text="black">
 <form name="calculator">
-КАЛЬКУЛЯТОР V.00.1
+КАЛЬКУЛЯТОР by axolotl228
 
 <input type="button" value="1" onclick="document.calculator.ans.value+='1'"><input type="button" value="2" onclick="document.calculator.ans.value+='2'"><input type="button" value="3" onclick="document.calculator.ans.value+='3'">
 
